--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
 
 [project]
-name = "plankton"
-version = "0.0.1"
+name = "planktonspace"
+version = "0.0.5"
 authors = [
   { name="Sebastian Tiesmeyer", email="sebastian.tiesmeyer@bih-charite.de" },
 ]
@@ -17,7 +17,24 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-
+dependencies = [
+              'numpy',
+              'anndata',
+               'scanpy',
+             'jupyter',
+            'matplotlib',
+           'numpy',
+            'pandas',
+          'plotly',
+          'scipy',
+          'scikit-image',
+        'scikit-learn',
+          'umap-learn',
+]
 [project.urls]
 "Homepage" = "https://github.com/HiDiHlabs/planktonpy"
 "Bug Tracker" = "https://github.com/HiDiHlabs/planktonpy"
+
+[tool.setuptools.packages.find]
+where = ["."] 
+include = ["plankton*"]  # package names should match these glob patterns (["*"] by default)
